objects/Meta_Data_Manager__c.object
<CustomObject>
    <label>Technical Solution Manager</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Meta Data Manager ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Solution Manager</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Scrum_Manager__r.Scrum_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Scrum_Manager__r.Scrum_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scrum_Status__c</fullName>
        <formula>TEXT(Scrum_Manager__r.Scrum_Task_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scrum Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meta_Data_URL__c</fullName>
        <label>Meta Data URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Scrum_Manager__c</fullName>
        <label>Scrum Manager</label>
        <referenceTo>Scrum_Manager__c</referenceTo>
        <relationshipName>Meta_Data_Manager</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meta_Data_Owner__c</fullName>
        <formula>(Scrum_Manager__r.Primary_Task_Assignee__r.FirstName) + &quot; &quot; + (Scrum_Manager__r.Primary_Task_Assignee__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meta Data Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meta_Data_Detail__c</fullName>
        <label>Meta Data Detail</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meta_Task_Status__c</fullName>
        <label>Meta Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Ask For More Info</fullName>
                </value>
                <value>
                    <fullName>Dependent On Someone Else</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developer_Efforts__c</fullName>
        <label>Developer&apos;s Efforts</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <formula>Scrum_Manager__r.Potential_Solution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Effort_Hours__c</fullName>
        <label>Task Effort Hours</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Level_Requirement__c</fullName>
        <formula>Scrum_Manager__r.Scrum_Problem_Statement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Level Requirement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Meta_Data_Task__c</fullName>
        <label>Type Of Meta Data Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Classes</fullName>
                    <default>true</default>
                    <label>Apex Classes</label>
                </value>
                <value>
                    <fullName>Apex Triggers</fullName>
                </value>
                <value>
                    <fullName>Approval Processes</fullName>
                </value>
                <value>
                    <fullName>Apps</fullName>
                </value>
                <value>
                    <fullName>Buttons/Links</fullName>
                </value>
                <value>
                    <fullName>Custom Field</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Custom Settings</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Email Templates</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Page Layouts</fullName>
                </value>
                <value>
                    <fullName>Profiles</fullName>
                </value>
                <value>
                    <fullName>Record Types</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Salesforce License</fullName>
                </value>
                <value>
                    <fullName>Tabs</fullName>
                </value>
                <value>
                    <fullName>Validation Rules</fullName>
                </value>
                <value>
                    <fullName>Visual Force Pages</fullName>
                </value>
                <value>
                    <fullName>Workflow Rules</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Percentage_Completed__c</fullName>
        <label>Task Percentage Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                    <default>true</default>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Task_Description__c</fullName>
        <label>Technical Task Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Sandbox_Environment__c</fullName>
        <label>Salesforce Sandbox/ Environment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development Sandbox</fullName>
                    <default>true</default>
                    <label>Development Sandbox</label>
                </value>
                <value>
                    <fullName>Full Copy/UAT Sandbox</fullName>
                </value>
                <value>
                    <fullName>Training Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>